# Weaszel

./: .gitignore  OPTIMIZATION_SUMMARY.md  PERFORMANCE_ANALYSIS.md  README.md  STEERING-ARCHITECTURE.md  STEERING-CODEMAP.md  STEERING-PERFORMANCE.md  STEERING-PROMPTING.md  STEERING-RESISTANCE.md  STEERING-ROADMAP.md  STEERING-SETUP.md  STEERING.md  SYSTEM_ARCHITECTURE.md  identity.json  package-lock.json  package.json  pyproject.toml  user_data.template.md
job-weasel-agent/: Dockerfile  EXPERIMENTAL_DESKTOP.md  README.md  __init__.py  agent.py  browser_agent.py  desktop_computer.py  desktop_functions.py  perf_context.py  perf_logger.py  perf_report.py  query_planner.py  requirements.txt  retry_controller.py  start_chrome.sh  steering_loader.py  thinking_controller.py  thinking_engine.py  timed_llm.py  user_data.md  weasel.py  working_memory.py
job-weasel-agent/computers/: __init__.py
job-weasel-agent/computers/playwright/: playwright.py
job-weasel-agent/thinking/: __init__.py  context.py  steering_loader.py  thinking_engine.py  thinking_llm.py  working_memory.py
web/: package-lock.json  package.json
web/app/: layout.tsx  page.tsx  robots.ts  sitemap.ts
web/app/blog/: page.tsx
web/app/blog/desktop-control/: page.tsx
web/app/blog/v2-release/: page.tsx
web/app/changelog/: page.tsx
web/public/: install.sh
